--- a/index.html
+++ b/index.html
@@ -1217,12 +1217,12 @@
 
     /* Individual project colors */
    .case-study-card[data-project="dashboard"] { --card-gradient: linear-gradient(135deg, #d97706 0%, #fbbf24 100%); }
-    .case-study-card[data-project="xacteched"] { --card-gradient: linear-gradient(135deg, #059669 0%, #10b981 100%); }
+    .case-study-card[data-project="xacteched"] { --card-gradient: linear-gradient(135deg, #065f46 0%, #10b981 100%); }
     .case-study-card[data-project="resolute"] { --card-gradient: linear-gradient(135deg, #1E40AF 0%, #0D9488 100%); }
     .case-study-card[data-project="arizona"] { --card-gradient: linear-gradient(135deg, #dc2626 0%, #f97316 100%); }
-    .case-study-card[data-project="palmview"] { --card-gradient: linear-gradient(135deg, #0891b2 0%, #22d3ee 100%); }
+    .case-study-card[data-project="palmview"] { --card-gradient: linear-gradient(135deg, #164e63 0%, #06b6d4 100%); }
     .case-study-card[data-project="gardner"] { --card-gradient: linear-gradient(135deg, #18181b 0%, #7c3aed 100%); }
-    .case-study-card[data-project="codelab"] { --card-gradient: linear-gradient(135deg, #059669 0%, #10b981 100%); } /* XactechED green to match parent project */
+    .case-study-card[data-project="codelab"] { --card-gradient: linear-gradient(135deg, #065f46 0%, #10b981 100%); } /* xactechED green to match parent project */
 
     .case-study-meta {
       display: flex;
