Already Updated (no changes needed):  ✅ healthcare-dashboard.html (#d97706 → #fbbf24) ✅ resolute-services.html (#1E40AF → #0D9488) ✅ arizona-esthetics.html (#dc2626 → #f97316) ✅ gardner-chiropractic.html (#18181b → #7c3aed)
Already Updated (no changes needed):

✅ healthcare-dashboard.html (#d97706 → #fbbf24)
✅ resolute-services.html (#1E40AF → #0D9488)
✅ arizona-esthetics.html (#dc2626 → #f97316)
✅ gardner-chiropractic.html (#18181b → #7c3aed)

--- a/palmview-lab.html
+++ b/palmview-lab.html
@@ -18,7 +18,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <style>
-    :root { --color-bg-warm: #FDFCFA; --color-text: #1C1917; --color-text-secondary: #57534E; --font-display: 'DM Serif Display', Georgia, serif; --font-body: 'IBM Plex Sans', -apple-system, sans-serif; --max-width: 900px; --project-gradient: linear-gradient(135deg, #0891b2 0%, #06b6d4 100%); }
+    :root { --color-bg-warm: #FDFCFA; --color-text: #1C1917; --color-text-secondary: #57534E; --font-display: 'DM Serif Display', Georgia, serif; --font-body: 'IBM Plex Sans', -apple-system, sans-serif; --max-width: 900px; --project-gradient: linear-gradient(135deg, #164e63 0%, #06b6d4 100%); }
     * { margin: 0; padding: 0; box-sizing: border-box; }
     html { scroll-behavior: smooth; }
     body { font-family: var(--font-body); color: var(--color-text); line-height: 1.7; background: var(--color-bg-warm); }
