--- a/xacteched-campaign.html
+++ b/xacteched-campaign.html
@@ -25,7 +25,7 @@
       --font-display: 'DM Serif Display', Georgia, serif;
       --font-body: 'IBM Plex Sans', -apple-system, sans-serif;
       --max-width: 900px;
-      --project-gradient: linear-gradient(135deg, #059669 0%, #10b981 100%);
+      --project-gradient: linear-gradient(135deg, #065f46 0%, #10b981 100%);
     }
     * { margin: 0; padding: 0; box-sizing: border-box; }
     html { scroll-behavior: smooth; }
