updated CaseStudy downloads

--- a/arizona-esthetics-case-study.html
+++ b/arizona-esthetics-case-study.html
@@ -36,14 +36,14 @@
             display: flex;
             justify-content: space-between;
             align-items: flex-start;
-            border-bottom: 3px solid #db2777;
+            border-bottom: 3px solid #dc2626;
             padding-bottom: 0.75rem;
             margin-bottom: 1rem;
         }
 
         .header-left h1 {
             font-size: 18pt;
-            color: #db2777;
+            color: #dc2626;
             margin-bottom: 0.25rem;
         }
 
@@ -79,7 +79,7 @@
         .section-title {
             font-size: 11pt;
             font-weight: 700;
-            color: #db2777;
+            color: #dc2626;
             text-transform: uppercase;
             letter-spacing: 0.05em;
             margin-bottom: 0.5rem;
@@ -98,7 +98,7 @@
 
         /* Feature Banner */
         .feature-banner {
-            background: linear-gradient(135deg, #db2777 0%, #ec4899 100%);
+            background: linear-gradient(135deg, #dc2626 0%, #f97316 100%);
             color: white;
             border-radius: 8px;
             padding: 1rem 1.5rem;
@@ -131,7 +131,7 @@
         }
 
         .metric {
-            background: #fdf2f8;
+            background: #fef2f2;
             border-radius: 6px;
             padding: 0.6rem;
             text-align: center;
@@ -140,7 +140,7 @@
         .metric-value {
             font-size: 14pt;
             font-weight: 700;
-            color: #db2777;
+            color: #dc2626;
         }
 
         .metric-label {
@@ -151,7 +151,7 @@
 
         /* Timeline */
         .timeline {
-            background: #fdf2f8;
+            background: #fef2f2;
             border-radius: 6px;
             padding: 0.75rem 1rem;
             margin: 0.75rem 0;
@@ -160,7 +160,7 @@
         .timeline-title {
             font-size: 9pt;
             font-weight: 700;
-            color: #db2777;
+            color: #dc2626;
             margin-bottom: 0.5rem;
         }
 
@@ -176,7 +176,7 @@
 
         .timeline-item strong {
             display: block;
-            color: #db2777;
+            color: #dc2626;
             margin-bottom: 0.2rem;
         }
 
@@ -188,8 +188,8 @@
         }
 
         .skill-tag {
-            background: #fdf2f8;
-            color: #db2777;
+            background: #fef2f2;
+            color: #dc2626;
             padding: 0.2rem 0.5rem;
             border-radius: 3px;
             font-size: 8pt;
@@ -198,7 +198,7 @@
 
         /* Mission Callout */
         .callout {
-            background: #fdf2f8;
+            background: #fef2f2;
             border-radius: 6px;
             padding: 0.75rem 1rem;
             margin: 0.75rem 0;
@@ -207,7 +207,7 @@
         .callout-title {
             font-size: 9pt;
             font-weight: 700;
-            color: #db2777;
+            color: #dc2626;
             margin-bottom: 0.4rem;
         }
 
@@ -227,7 +227,7 @@
         }
 
         .footer a {
-            color: #db2777;
+            color: #dc2626;
             text-decoration: none;
         }
 
