--- a/healthcare-dashboard-case-study.html
+++ b/healthcare-dashboard-case-study.html
@@ -37,14 +37,14 @@
             display: flex;
             justify-content: space-between;
             align-items: flex-start;
-            border-bottom: 3px solid #1E40AF;
+            border-bottom: 3px solid #d97706;
             padding-bottom: 0.75rem;
             margin-bottom: 1rem;
         }
 
         .header-left h1 {
             font-size: 18pt;
-            color: #1E40AF;
+            color: #d97706;
             margin-bottom: 0.25rem;
         }
 
@@ -82,7 +82,7 @@
         .section-title {
             font-size: 11pt;
             font-weight: 700;
-            color: #1E40AF;
+            color: #d97706;
             text-transform: uppercase;
             letter-spacing: 0.05em;
             margin-bottom: 0.5rem;
@@ -117,7 +117,7 @@
         .metric-value {
             font-size: 16pt;
             font-weight: 700;
-            color: #1E40AF;
+            color: #d97706;
         }
 
         .metric-label {
@@ -154,7 +154,7 @@
         }
 
         .footer a {
-            color: #1E40AF;
+            color: #d97706;
             text-decoration: none;
         }
 
