--- a/resolute-case-study.html
+++ b/resolute-case-study.html
@@ -36,14 +36,14 @@
             display: flex;
             justify-content: space-between;
             align-items: flex-start;
-            border-bottom: 3px solid #7c3aed;
+            border-bottom: 3px solid #1E40AF;
             padding-bottom: 0.75rem;
             margin-bottom: 1rem;
         }
 
         .header-left h1 {
             font-size: 18pt;
-            color: #7c3aed;
+            color: #1E40AF;
             margin-bottom: 0.25rem;
         }
 
@@ -79,7 +79,7 @@
         .section-title {
             font-size: 11pt;
             font-weight: 700;
-            color: #7c3aed;
+            color: #1E40AF;
             text-transform: uppercase;
             letter-spacing: 0.05em;
             margin-bottom: 0.5rem;
@@ -114,7 +114,7 @@
         .metric-value {
             font-size: 16pt;
             font-weight: 700;
-            color: #7c3aed;
+            color: #1E40AF;
         }
 
         .metric-label {
@@ -173,7 +173,7 @@
 
         .skill-tag {
             background: #f5f3ff;
-            color: #7c3aed;
+            color: #1E40AF;
             padding: 0.2rem 0.5rem;
             border-radius: 3px;
             font-size: 8pt;
@@ -191,7 +191,7 @@
         .callout-title {
             font-size: 9pt;
             font-weight: 700;
-            color: #7c3aed;
+            color: #1E40AF;
             margin-bottom: 0.4rem;
         }
 
@@ -211,7 +211,7 @@
         }
 
         .footer a {
-            color: #7c3aed;
+            color: #1E40AF;
             text-decoration: none;
         }
 
