updates for "in the news"
updates for "in the news"

--- a/index.html
+++ b/index.html
@@ -2912,6 +2912,7 @@
           <ul class="nav-links" id="navLinks">
             <li><a href="#core-identity" onclick="closeMobileMenu()">Core</a></li>
             <li><a href="#work" onclick="closeMobileMenu()">Work</a></li>
+	    <li><a href="in-the-news.html" onclick="closeMobileMenu()">Press</a></li>
             <li><a href="#testimonials" onclick="closeMobileMenu()">Testimonials</a></li>
             <li><a href="#skills" onclick="closeMobileMenu()">Skills</a></li>
             <li><a href="#education" onclick="closeMobileMenu()">Education</a></li>
