fixed in the news links (press)

--- a/gardner-chiropractic.html
+++ b/gardner-chiropractic.html
@@ -609,10 +609,11 @@
     <footer class="footer">
       <div class="footer-content">
         <nav class="footer-nav">
-          <a href="index.html">Home</a>
-          <a href="index.html#work">Case Studies</a>
-          <a href="index.html#contact">Contact</a>
-        </nav>
+  <a href="index.html">Home</a>
+  <a href="index.html#work">Case Studies</a>
+  <a href="in-the-news.html">Press</a>
+  <a href="index.html#contact">Contact</a>
+</nav>
         <p class="footer-copyright">© 2025 Christie Stephenson Saavedra. All rights reserved.</p>
       </div>
     </footer>
