--- a/healthcare-dashboard.html
+++ b/healthcare-dashboard.html
@@ -711,12 +711,13 @@
     
     <footer class="footer">
       <div class="footer-content">
-        <nav class="footer-nav">
-          <a href="index.html#work">Work</a>
-          <a href="index.html#testimonials">Testimonials</a>
-          <a href="index.html#skills">Skills</a>
-          <a href="index.html#contact">Contact</a>
-        </nav>
+      <nav class="footer-nav">
+  <a href="index.html#work">Work</a>
+  <a href="in-the-news.html">Press</a>
+  <a href="index.html#testimonials">Testimonials</a>
+  <a href="index.html#skills">Skills</a>
+  <a href="index.html#contact">Contact</a>
+</nav>
         <p class="footer-copyright">© 2025 Christie Stephenson Saavedra. All rights reserved.</p>
         <p style="font-size:0.7rem;color:rgba(255,255,255,0.4);margin-top:0.5rem;">Original code, design, and case study content.</p>
       </div>
