COMPLETE UPDATE SUMMARY DATE FIXES ($200K Grant → June 2015) FileLocationFindReplace Within-the-news.htmlLine 656<div class="news-date-month">Mar</div><div class="news-date-month">Jun</div>xacteched-campaign.htmlLine 614 (optional)<div class="timeline-date">Spring 2015</div><div class="timeline-date">June 2015</div>  FOOTER NAV FIXES (from earlier) FileLineActionarizona-esthetics.html514REMOVE "View Press Coverage" CTAresolute-services.html521ADD "Press" to footer navpalmview-lab.html518ADD "Press" to footer navhealthcare-dashboard.html714-719ADD "Press" to footer navgardner-chiropractic.html611-615ADD "Press" to footer nav
COMPLETE UPDATE SUMMARY
DATE FIXES ($200K Grant → June 2015)
FileLocationFindReplace Within-the-news.htmlLine 656<div class="news-date-month">Mar</div><div class="news-date-month">Jun</div>xacteched-campaign.htmlLine 614 (optional)<div class="timeline-date">Spring 2015</div><div class="timeline-date">June 2015</div>

FOOTER NAV FIXES (from earlier)
FileLineActionarizona-esthetics.html514REMOVE "View Press Coverage" CTAresolute-services.html521ADD "Press" to footer navpalmview-lab.html518ADD "Press" to footer navhealthcare-dashboard.html714-719ADD "Press" to footer navgardner-chiropractic.html611-615ADD "Press" to footer nav

--- a/in-the-news.html
+++ b/in-the-news.html
@@ -653,7 +653,7 @@
       <!-- Item 7: $200K Grant -->
       <li class="news-item">
         <div class="news-date">
-          <div class="news-date-month">Mar</div>
+          <div class="news-date-month">June</div>
           <div class="news-date-year">2015</div>
         </div>
         <div class="news-content">
@@ -741,7 +741,7 @@
     
     <!-- Pattern Box -->
     <div class="pattern-box">
-      <p><strong>The Pattern:</strong> These aren't just portfolio claims—they're documented, third-party validated results. State boards approved my curriculum. Government committees funded my initiatives. The evidence exists in official records, not just testimonials.</p>
+      <p><strong>The Pattern:</strong>Innovative Solutioning.</p>
     </div>
     
     <!-- CTA -->
